package Task1;

public interface FlashLightInterface {

    /*public void on();
    public void off();
    public boolean isLight();*/
    void switchLight();
    void inputBattery(ChinaBattery battery);
}
